--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/about">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
   <meta property="twitter:title" content="Professional Background and Interests - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- favicon -->
 
@@ -151,7 +151,7 @@
                 <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/about"
                   target="_blank">Share on LinkedIn</a>
 
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Professional%20Background%20and%20Interests%20-%20Vicky%20Wang"
+                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Professional%20Background%20and%20Interests%20-%20Vicky%20Wang"
                   target="_blank">
                   Share on Pinterest
                 </a>
@@ -570,7 +570,7 @@
 
   <div class="Grid Grid--full u-textCenter">
 
-    <ul class="tags">
+    <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
 
@@ -580,6 +580,8 @@
       <li class="tag"><span class="box"> Interaction Design</span></li>
 
       <li class="tag"><span class="box"> Product Design</span></li>
+      <li class="tag"><span class="box"> Service Design</span></li>
+
       <li class="tag"><span class="box"> Design Thinking</span></li>
       <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
       <li class="tag"><span class="box"> Journey Mapping </span></li>
@@ -600,6 +602,11 @@
       <li class="tag"><span class="box"> Concept Testing</span></li>
       <li class="tag"><span class="box"> Usability Testing</span></li>
       <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
+
+      <li class="tag"><span class="box"> SaaS Application Design</span></li>
+      <li class="tag"><span class="box"> B2B Application Design</span></li>
+      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
+
 
       <li class="tag"><span class="box"> Figma</span></li>
       <li class="tag"><span class="box"> Adobe CS </span></li>
