--- a/application_info/index.html
+++ b/application_info/index.html
@@ -2,123 +2,83 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | UX Designer | Application Info </title>
-  <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
+  <!-- Basic Metadata -->
+  <link rel="canonical" href="https://vickywang.me/application_info/">
+  <title>Application Info by Vicky Wang </title>
+  <meta name="robots" content="noindex,nofollow">
 
 
-
-  <meta name="description" content="Vicky Wang's portfolio website">
+  <meta name="author" content="Vicky W.">
+  <meta name="description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
-  <meta property='og:description' content='A simple way for recruiters to quickly and easily schedule interviews' />
-  <meta property='og:url' content="https://vickywang.me/" />
-  <meta property="og:site_name" content="Vicky Wang's Project">
+  <meta property="og:title" content="Photographic Artistry by Vicky Wang">
+  <meta property="og:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:url" content="https://vickywang.me/application_info/">
+  <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/application_info/">
+  <meta property="twitter:title" content="Photographic Artistry by Vicky Wang">
+  <meta property="twitter:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="twitter:image"
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-  <link rel="manifest" href="../site.webmanifest">
   <!-- favicon -->
 
-  <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
-
-  <link type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.26.0/prism.min.js">
-  </link>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 
 
+  <!-- Google Font Preconnect-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-
+  <!-- Google Font Preconnect-->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--special font-family: 'Train One'; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - Hi Melody-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - shadows into light-->
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: La Belle Aurore; -->
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat'; -->
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat Brush', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
+
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Gloria Hallelujah'; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-  <!--handwriting Edu SA Beginner font-family: 'Edu SA Beginner', cursive; -->
-
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <!--font awesome -->
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
     integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
-
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <!--jQuery 07182022-->
+
+  <!--aos-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!--aos-->
 
 
+  <!-- google analytics-->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -126,14 +86,11 @@
 
     gtag('config', 'G-E8YXDWJST2');
   </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 
-
-
-
-
+  <link rel="stylesheet" href="../main.css" />
+  <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
 </head>
-
 <body>
 
   <!--progressBarScroll-->
@@ -147,58 +104,23 @@
   <nav class="header" id="header">
     <div class="backgroundColorNav">
       <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
-      </a>
+
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            <div class="dropdown-content">
-              <a href="/glorify/">
-
-                <div class="GLORIFY">
-                  <img src="../image/Cover_Glorify.png" alt="GLORIFY">
-                  <div class="element">
-                    <h5 class="colorBlack">GLORIFY | Daily Worship in Christian Practice</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/seer/">
-                <div class="SEER">
-                  <img src="../image/Cover_SEER.png" alt="SEER">
-                  <div class="element">
-                    <h5 class="colorBlack">SEER | Marketing Manager Tracking Business Performance</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/appointa/">
-                <div class="APPOINTA">
-                  <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
-                  <div class="element">
-                    <h5 class="colorBlack">APPOINTA | Recruiter Appointment Scheduling</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/design_system/">
-                <div>
-                  <img src="../image/Cover_portfolioWeb.png" alt="Design System">
-                  <div class="element">
-                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
-                  </div>
-                </div>
-              </a>
-
-            </div>
+          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box ">PROJECT</a>
+          </li>
+          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
+          </li>
+          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          </li>
+          <li class="nav-item inactive marginZero"><a href="/blog" class="nav-link box ">BLOG</a>
           </li>
 
-          <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box font300-1080 ">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
           </li>
         </ul>
       </div>
+
       <div class="hamburger">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -206,6 +128,8 @@
       </div>
     </div>
   </nav>
+  <!-- header -->
+
 
 
 
