--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
   <meta property="twitter:title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- favicon -->
 
@@ -157,7 +157,7 @@
                 <div class="dropdownSM-content">
                   <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me"
                     target="_blank">Share on LinkedIn</a>
-                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang"
+                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang"
                     target="_blank">Share on Pinterest</a>
                 </div>
               </div>
