--- a/photography/index.html
+++ b/photography/index.html
@@ -22,7 +22,7 @@
   <meta property="og:url" content="https://vickywang.me/photography">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- favicon -->
 
@@ -158,7 +158,7 @@
                 <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/photography"
                   target="_blank">Share on LinkedIn</a>
 
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Photographic%20Artistry%20by%20Vicky%20Wang"
+                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Photographic%20Artistry%20by%20Vicky%20Wang"
                   target="_blank">
                   Share on Pinterest
                 </a>
