--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -22,7 +22,7 @@
     content="Dive into Navigation V1 System by Vicky Wang, featuring advanced interface design and enhanced user experience. Pioneering digital navigation solutions.">
   <meta property="og:url" content="https://vickywang.me/navigation/V1/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -30,7 +30,7 @@
   <meta property="twitter:title" content="Exploring Navigation Design V1 - Interface Design & User Experience by Vicky Wang">
   <meta property="twitter:description"
     content="Dive into Navigation V1 System by Vicky Wang, featuring advanced interface design and enhanced user experience. Pioneering digital navigation solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- favicon -->
 
