--- a/navigation/index.html
+++ b/navigation/index.html
@@ -21,7 +21,7 @@
     content="Explore Vicky Wang's solutions in advanced navigation, focusing on user interface and digital experiences. Innovative designs enhancing user interaction and functionality.">
   <meta property="og:url" content="https://vickywang.me/navigation/V3/">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
   <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
   <meta property="twitter:description"
     content="Explore Vicky Wang's solutions in advanced navigation, focusing on user interface and digital experiences. Innovative designs enhancing user interaction and functionality.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/Cover_portfolioWeb.svg">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang.svg">
 
   <!-- favicon -->
 
