--- a/photography/index.html
+++ b/photography/index.html
@@ -4,7 +4,8 @@
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/photography">
@@ -227,6 +228,7 @@
     <section id="content1">
 
       <section id="content11">
+
         <div class="wrapper">
           <div class="element">
             <p class="tArrow">Pacific Grove Rocky View<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -235,15 +237,22 @@
         </div>
         <div class="blankHS"></div>
         <div class="wrapper">
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="./Squirrel01.jpg" alt="Wildlife">
+                  <img src="default_Squirrel_Stand.jpg" 
+                       srcset="small_Squirrel_Stand.jpg 500w, 
+                               medium_Squirrel_Stand.jpg 1000w, 
+                               large_Squirrel_Stand.jpg 1500w" 
+                       sizes="(max-width: 480px) 400px, 
+                              (max-width: 768px) 700px, 
+                              (max-width: 1024px) 1000px, 
+                              1500px" 
+                       alt="Squirrel Eat Nuts">
                   <div class="elementInner">
                     <h5>Wildlife</h5>
-                    <h3><strong>Grove Rocky View, Monterey, CA</strong>  </h3>
+                    <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
                     <p class="lineHorizAll"></p>
                     <h6>September, 2023</h6>
                     <h6>Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
@@ -254,15 +263,25 @@
           </div>
         </div>
         <div class="blankHS"></div>
+
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <div class=" ShadowBox">
-                  <img src="./Squirrel02.jpg" alt="Wildlife">
+                <div class="ShadowBox">
+                  <img src="default_Squirrel_Eat.jpg" 
+                       srcset="small_Squirrel_Eat.jpg 500w, 
+                               medium_Squirrel_Eat.jpg 1000w, 
+                               large_Squirrel_Eat.jpg 1500w" 
+                       sizes="(max-width: 480px) 400px, 
+                              (max-width: 768px) 700px, 
+                              (max-width: 1024px) 1000px, 
+                              1500px" 
+                       alt="Squirrel Eat Nuts">
+
                   <div class="elementInner">
                     <h5>Wildlife</h5>
-                    <h3><strong>Grove Rocky View, Monterey, CA</strong>  </h3>
+                    <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
                     <p class="lineHorizAll"></p>
                     <h6> February, 2023</h6>
                     <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
@@ -273,10 +292,10 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="./Squirrel03.jpg" alt="Wildlife">
+                  <img src="./Squirrel_Crawl.jpg" alt="Wildlife">
                   <div class="elementInner">
                     <h5>Wildlife</h5>
-                    <h3><strong>Grove Rocky View, Monterey, CA</strong>  </h3>
+                    <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
                     <p class="lineHorizAll"></p>
                     <h6> February, 2023</h6>
                     <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
@@ -308,7 +327,7 @@
                   <img src="./Butterfly01.jpg" alt="Wildlife">
                   <div class="elementInner">
                     <h5>Wildlife</h5>
-                    <h3><strong>Monarch Butterfly Sanctuary</strong>  </h3>
+                    <h3><strong>Monarch Butterfly Sanctuary</strong> </h3>
 
                     <p class="lineHorizAll"></p>
                     <h6> February, 2023</h6>
@@ -323,7 +342,7 @@
                   <img src="./Butterfly02.jpg" alt="Wildlife">
                   <div class="elementInner">
                     <h5>Wildlife</h5>
-                    <h3><strong>Monarch Butterfly Sanctuary</strong>  </h3>
+                    <h3><strong>Monarch Butterfly Sanctuary</strong> </h3>
                     <p class="lineHorizAll"></p>
                     <h6> February, 2023</h6>
                     <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
@@ -479,7 +498,8 @@
       <section id="content31">
         <div class="wrapper">
           <div class="element">
-            <p class="tArrow">Bosque Del Apache National Wildlife Refuge <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+            <p class="tArrow">Bosque Del Apache National Wildlife Refuge <img class="seArrow" src="../icon/arrow-se.svg"
+                alt="icon arrow"></p>
           </div>
         </div>
         <div class="blankHS"></div>
@@ -544,7 +564,8 @@
       <section id="content32">
         <div class="wrapper">
           <div class="element">
-            <p class="tArrow">Sacramento National Wildlife Refuge<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+            <p class="tArrow">Sacramento National Wildlife Refuge<img class="seArrow" src="../icon/arrow-se.svg"
+                alt="icon arrow"></p>
           </div>
         </div>
         <div class="blankHS"></div>
@@ -609,7 +630,8 @@
       <section id="content33">
         <div class="wrapper">
           <div class="element">
-            <p class="tArrow">White Sands National Monument <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+            <p class="tArrow">White Sands National Monument <img class="seArrow" src="../icon/arrow-se.svg"
+                alt="icon arrow"></p>
           </div>
         </div>
         <div class="blankHS"></div>
@@ -741,14 +763,15 @@
       <section id="content34">
         <div class="wrapper">
           <div class="element">
-            <p class="tArrow">  Taos Pueblo Indian Reservation <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+            <p class="tArrow"> Taos Pueblo Indian Reservation <img class="seArrow" src="../icon/arrow-se.svg"
+                alt="icon arrow"></p>
           </div>
         </div>
         <div class="blankHS"></div>
 
         <div class="wrapper">
           <div class="Grid Grid--full">
-  
+
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
