--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1370,7 +1370,7 @@
             </div>
           </div>
 
-          <div class="Grid Grid--full u-textCenter">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="Demo">
                 <div class="elementInnerDemo content-1of1"></div>
